# Uni-courses

./: README.md
ADA/: 01_PythonBasics.ipynb  02_DatenEinlesen_Indexieren.ipynb  03_GrundlagenDatenaufbereitung.ipynb  05_Entscheidungsbaum.ipynb  06_NeuronalesNetz.ipynb  README.md
BDA I/: Aufgabe1_MapReduce.ipynb  Aufgabe3_Spark.ipynb  Aufgabe4_DataFrames.ipynb  readme.md
BDA II/: Aufgabe1.ipynb  Aufgabe2.ipynb  Aufgabe3.ipynb  README.md
Business Intelligence/Meilenstein 1/: Meilenstein 1.docx  a1.sql  a2.sql  a3.sql  a6.sql  a8.sql  m1_a6a.drawio  shoes.csv  ~$ilenstein 1.docx
Linux/: Task1_C++_Makefile  description
Linux/Prak01_BashScripting/: arrays.sh  conditions.sh  loops.sh
Linux/Prak01_BashScripting/Task 1/: arrays.sh  calc.sh  hello_world.sh  inputs.sh  variables.sh
Linux/Prak01_BashScripting/Task 2/: get_usernames.sh  update_users.sh
Linux/Prak01_BashScripting/Task 2/keydir/: example.conf  example.confn-place
Linux/Prak02/Task1/: hello_world.cpp  main.cpp
Linux/Prak02/Task2/: Makefile  linux-24.tex  t.txt
Linux/Prak02_Makefiles/Task1/: Makefile  description.txt  main
Linux/Prak02_Makefiles/Task2/: description.txt  linux-24.bib
Linux/Prak03_CMake/: CMakeLists.txt  hello_world  hello_world.cpp
Linux/Prak03_CMake/include/: MyLibrary.h
Linux/Prak03_CMake/src/: MyLibrary.cpp  hello_world.cpp
Linux/Task1/: Makefile  hello_world.cpp  main.cpp
